# wego

./: README.md  stack.yaml  wego.cabal
src/: WEGO.hs
src/WEGO/: Client.hs  Server.hs  Types.hs
src/WEGO/Server/: Controller.hs  Model.hs  View.hs
